--- a/src/app/checklist/checklist.component.html
+++ b/src/app/checklist/checklist.component.html
@@ -51,42 +51,39 @@
       <mat-icon>remove_done</mat-icon>
     </button>
   </div>
-  <div *ngFor="let region of regions; trackBy: trackByRegion" class="mb-6">
-    <mat-card>
-      <mat-card-header class="flex items-center justify-between">
-        <div class="flex-grow flex items-center">
-          <button mat-icon-button (click)="toggleRegion(region)" class="mr-2">
-            <mat-icon>{{ regionCollapsedState[region] ? 'expand_more' : 'expand_less' }}</mat-icon>
-          </button>
-          <mat-card-title
-            class="text-lg sm:text-xl break-words cursor-pointer"
-            (click)="toggleRegion(region)"
-            (keydown.enter)="toggleRegion(region)"
+  <mat-accordion multi togglePosition="before">
+    <mat-expansion-panel *ngFor="let region of regions; trackBy: trackByRegion" class="mb-2" [expanded]="!isRegionComplete(region)">
+      <mat-expansion-panel-header>
+        <mat-panel-title class="text-lg sm:text-xl font-medium">
+          {{ region }}
+        </mat-panel-title>
+        <mat-panel-description class="flex-grow justify-end items-center">
+          ({{getCompletedItemsInRegion(region)}} / {{getTotalItemsInRegion(region)}})
+          <div
+            (click)="$event.stopPropagation()"
+            (keydown.enter)="$event.stopPropagation()"
             tabindex="0"
             role="button"
+            class="focus:outline-none"
           >
-            {{ region }}
-          </mat-card-title>
-        </div>
-        <div class="flex items-center">
-          <button
-            mat-icon-button
-            (click)="checkAllInRegion(region, true)"
-            aria-label="Check all items in this region"
-          >
-            <mat-icon>done_all</mat-icon>
-          </button>
-          <button
-            mat-icon-button
-            color="primary"
-            (click)="clearAllInRegion(region)"
-            aria-label="Clear all items in this region"
-          >
-            <mat-icon>remove_done</mat-icon>
-          </button>
-        </div>
-      </mat-card-header>
-      <mat-card-content *ngIf="!regionCollapsedState[region]">
+            <button
+              mat-icon-button
+              (click)="checkAllInRegion(region, true)"
+              aria-label="Check all items in this region"
+            >
+              <mat-icon>done_all</mat-icon>
+            </button>
+            <button
+              mat-icon-button
+              color="primary"
+              (click)="clearAllInRegion(region)"
+              aria-label="Clear all items in this region"
+            >
+              <mat-icon>remove_done</mat-icon>
+            </button>
+          </div>
+        </mat-panel-description>
+      </mat-expansion-panel-header>
         <div *ngFor="let section of sections[region]" class="mb-4">
           <div class="flex justify-between items-center">
             <h3 class="mat-subheader text-base sm:text-lg font-medium break-words">
@@ -139,9 +136,8 @@
             </div>
           </div>
         </div>
-      </mat-card-content>
-    </mat-card>
-  </div>
+    </mat-expansion-panel>
+  </mat-accordion>
 </div>
 
 <!-- Scroll to top FAB -->
