feat: implement checklist UI with progress tracking and dark mode support

--- a/src/app/checklist/checklist.component.html
+++ b/src/app/checklist/checklist.component.html
@@ -54,7 +54,7 @@
   <mat-accordion multi togglePosition="before">
     <mat-expansion-panel *ngFor="let region of regions; trackBy: trackByRegion" class="mb-2" [expanded]="!isRegionComplete(region)">
       <mat-expansion-panel-header>
-        <mat-panel-title class="text-lg sm:text-xl font-medium">
+        <mat-panel-title class="font-medium mat-subheader">
           {{ region }}
         </mat-panel-title>
         <mat-panel-description class="flex-grow justify-end">
@@ -88,7 +88,7 @@
       </mat-expansion-panel-header>
         <div *ngFor="let section of sections[region]" class="mb-4">
           <div class="flex justify-between items-center">
-            <h3 class="mat-subheader text-base sm:text-lg font-medium break-words">
+            <h3 class="mat-subheader font-medium break-words">
               {{ section }}
             </h3>
             <div
@@ -122,7 +122,7 @@
                 (ngModelChange)="onCheckboxChange($event, item.id)"
               ></mat-checkbox>
               <div
-                class="ml-2 whitespace-normal  break-words cursor-pointer"
+                class="ml-2 whitespace-normal  break-words cursor-pointer text-sm"
                 (click)="item.checked = !item.checked; onCheckboxChange(item.checked, item.id)"
                 (keydown.enter)="item.checked = !item.checked; onCheckboxChange(item.checked, item.id)"
                 (keydown.space)="item.checked = !item.checked; onCheckboxChange(item.checked, item.id)"
