--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,7 @@ html, body { height: 100%; }
 body { 
   margin: 0; 
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  min-width: 500px;
 }
 
 // Dark mode specific styles
