--- a/src/app/checklist/checklist.component.html
+++ b/src/app/checklist/checklist.component.html
@@ -51,6 +51,9 @@
       (ngModelChange)="applyFilter()"
       placeholder="e.g. Bed"
     />
+    <button *ngIf="searchQuery" matSuffix mat-icon-button aria-label="Clear" (click)="clearSearch()">
+      <mat-icon>close</mat-icon>
+    </button>
   </mat-form-field>
   <div class="flex flex-wrap justify-end mb-4">
     <button
