--- a/src/app/checklist/checklist.component.html
+++ b/src/app/checklist/checklist.component.html
@@ -51,7 +51,13 @@
       (ngModelChange)="applyFilter()"
       placeholder="e.g. Bed"
     />
-    <button *ngIf="searchQuery" matSuffix mat-icon-button aria-label="Clear" (click)="clearSearch()">
+    <button
+      *ngIf="searchQuery"
+      matSuffix
+      mat-icon-button
+      aria-label="Clear"
+      (click)="clearSearch()"
+    >
       <mat-icon>close</mat-icon>
     </button>
   </mat-form-field>
