--- a/src/app/checklist/checklist.component.scss
+++ b/src/app/checklist/checklist.component.scss
@@ -4,7 +4,8 @@
   bottom: 20px;
   right: 20px;
   z-index: 1000;
-  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
+    0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
 }
 
 // Hide button on mobile devices in landscape mode to avoid overlapping with browser UI
