Updates error message text
Improves the error message displayed when the user enters the wrong password.

The new message provides additional context for the user and hints at the correct answer.

--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -8,7 +8,7 @@
     <button mat-raised-button color="primary" (click)="checkPassword()" >Submit</button>
   </div>
   <div *ngIf="showError" class="error-screen">
-    <h2 class="mat-headline-5">Looks like you don't rock :(</h2>
+    <h2 class="mat-headline-5">Looks like you don't rock :( Some mascots are better than others...</h2>
     <button mat-stroked-button color="warn" (click)="tryAgain()">Try Again</button>
   </div>
 </div>
