--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,15 +1,17 @@
 <div *ngIf="isAuthenticated; else passwordPrompt">
-  <mat-tab-group>
-    <mat-tab label="Checklist">
-      <div class="container mx-auto mt-12 text-center">
-        <h1 class="text-2xl sm:text-3xl font-bold">Dormitory Inspection Checklist</h1>
-      </div>
-      <app-checklist id="checklist-container"></app-checklist>
-    </mat-tab>
-    <mat-tab label="Quiz">
-      <app-quiz></app-quiz>
-    </mat-tab>
-  </mat-tab-group>
+
+
+  <div *ngIf="selectedView === 'checklist'" class="container mx-auto mt-12">
+    <h1 class="text-2xl sm:text-3xl font-bold text-center">Dormitory Inspection Checklist</h1>
+    <app-navigation [selectedView]="selectedView" (viewSelected)="onViewSelected($event)"></app-navigation>
+    <app-checklist id="checklist-container"></app-checklist>
+  </div>
+
+  <div *ngIf="selectedView === 'quiz'" class="container mx-auto mt-12">
+    <h1 class="text-2xl sm:text-3xl font-bold text-center">Quiz</h1>
+    <app-navigation [selectedView]="selectedView" (viewSelected)="onViewSelected($event)"></app-navigation>
+    <app-quiz></app-quiz>
+  </div>
 </div>
 
 <ng-template #passwordPrompt>
