feat: implement quiz component with paginated questions and progress tracking

--- a/src/app/question/question.html
+++ b/src/app/question/question.html
@@ -1,21 +1,22 @@
 <div *ngIf="question" class="p-4">
   <mat-card>
     <mat-card-header>
-      <mat-card-title class="text-xl font-bold">{{ question.questionText }}</mat-card-title>
+      <mat-card-title class="text-xl font-bold">{{ questionNumber }}. {{ question.questionText }}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <mat-list role="list">
         <mat-list-item
-          *ngFor="let option of shuffledOptions"
+          *ngFor="let option of shuffledOptions; let i = index"
           (click)="selectOption(option)"
-          class="cursor-pointer my-2 p-3 rounded border"
+          class="cursor-pointer my-2 p-3 rounded border flex items-center"
           [ngClass]="{
-            'bg-green-200 border-green-500': isAnswered && isCorrect(option),
-            'bg-red-200 border-red-500': isAnswered && isIncorrect(option),
+            'bg-green-600 text-white border-green-700': isAnswered && isCorrect(option),
+            'bg-red-600 text-white border-red-700': isAnswered && isIncorrect(option),
             'hover:bg-gray-100': !isAnswered
           }"
         >
-          {{ option.text }}
+          <span class="font-bold mr-2">{{ getLetter(i) }})</span>
+          <span>{{ option.text }}</span>
         </mat-list-item>
       </mat-list>
       <div *ngIf="isAnswered" class="mt-4 p-4 bg-blue-100 border-l-4 border-blue-500 text-blue-700">
