--- a/src/app/quiz/quiz.html
+++ b/src/app/quiz/quiz.html
@@ -59,10 +59,31 @@
   </div>
 
   <ng-template #resultsView>
-    <app-results
+        <app-results
       [score]="score"
       [totalQuestions]="questions.length"
       (restart)="restartQuiz()"
     ></app-results>
+
+    <div *ngIf="missedAreas.length > 0" class="mt-8">
+      <h3 class="text-xl font-bold mb-4 text-center">Areas to Review</h3>
+      <table mat-table [dataSource]="missedAreas" class="mat-elevation-z8 w-full">
+
+        <!-- Section Column -->
+        <ng-container matColumnDef="section">
+          <th mat-header-cell *matHeaderCellDef> Section </th>
+          <td mat-cell *matCellDef="let element"> {{element.section}} </td>
+        </ng-container>
+
+        <!-- Count Column -->
+        <ng-container matColumnDef="count">
+          <th mat-header-cell *matHeaderCellDef class="text-center"> Incorrect Answers </th>
+          <td mat-cell *matCellDef="let element" class="text-center"> {{element.count}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
   </ng-template>
 </div>
