Starts a new quiz when switching to the quiz view
Ensures a fresh quiz is presented to the user when they
navigate to the quiz view from another section of the app.

This prevents users from seeing a partially completed quiz
if they switch views and come back.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -16,7 +16,7 @@
       [selectedView]="selectedView"
       (viewSelected)="onViewSelected($event)"
     ></app-navigation>
-    <app-quiz></app-quiz>
+    <app-quiz #quiz></app-quiz>
   </div>
 </div>
 
